# chronomaxi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  chronomaxi-tracker.service  chronomaxi-web.service  package.json  run.sh  tsconfig.json
.husky/: post-commit
convex/: actorOverride.ts  dashboard.ts  deviceAliases.ts  dictation.ts  http.ts  migration.ts  rebuild.ts  schema.ts  spans.ts  sshSessions.ts  statusline.ts  timer.ts
convex/_generated/: api.d.ts
convex/lib/: aggregation.ts  deviceAlias.ts  spanIngest.ts
deploy/: .env.example  BACKUP-RUNBOOK.md  brave-configure-macos.sh  brave-configure.sh  chronomaxi-ctl  cutover-ron.sh  docker-compose.yml  fleet-deploy.sh  standby-restore.sh
deploy/attribution/: README.md  chronomaxi-attribution.zsh  chronomaxi-ssh-hook.sh  install.sh  install.test.sh  skill-updates.md
deploy/drilldown/: chronomaxi-foreground.zsh  chronomaxi-tmux-publish.sh  install.sh  install.test.sh
deploy/hermes/: chronomaxi_dream.py  chronomaxi_hermes_connector.py  chronomaxi_steering.py  install.sh
deploy/kloyce/: chronomaxi-kloyce-reporter.py  chronomaxi-kloyce-reporter.service  com.pynchlabs.chronomaxi-kloyce-reporter.plist  install-reporter.sh
deploy/launchd/: com.pynchlabs.chronomaxi-tracker.plist
deploy/statusbar/: README.md  chronomaxi-bumblebee.py  chronomaxi-status.sh  chronomaxi-swiftbar.1m.sh  install-statusbar.sh  waybar-module.jsonc
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc  bun.lockb  next.config.js  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json
frontend/prisma/: schema.prisma  seed.ts
frontend/src/: env.js
migration/: .gitignore  README.md  import.ts  package.json  tsconfig.json  verify.ts
migration/fixtures/: generate-fixture.ts
migration/lib/: args.ts  batch-writer.ts  checkpoint-manager.ts  compaction.ts  convex-client.ts  datasets.ts  device-aliases.ts  load-env.ts  local-checkpoint.ts  normalize-timestamp.ts  sleep.ts  sqlite-source.ts
scripts/: rebuild-aggregates.ts
src/: app.rs  config.rs  db.rs  lib.rs  log.rs  logger.rs  logger_v2.rs  logger_v3.rs  main.rs
tracker/: .env.example  .gitignore  Cargo.toml  README.md
tracker/src/: actor.rs  app.rs  buckets.rs  category.rs  config.rs  db.rs  hypr_events.rs  idle_tracking.rs  input_evdev.rs  lib.rs  log.rs  logger_v3.rs  logger_v4.rs  main.rs  old_postgres_db_adapter.rs  privacy.rs  program_tracking.rs  tmux.rs
tracker/src/capture/: mod.rs
tracker/src/capture/macos/: ax.rs  event_tap.rs  mod.rs  permissions.rs
tracker/src/ingest/: mod.rs
tracker/src/spool/: mod.rs
wiki/: INDEX.md  LOG.md  SCHEMA.md
wiki/assets/: ui-overhaul-comparison.html
wiki/pages/: 2026-07-09-ui-overhaul.md  2026-07-10-batch-two.md  architecture.md  design-system.md  historical-data.md  operations.md
zig-frontend/: README.md  build.zig  build.zig.zon
zig-frontend/src/: constants.zig  (+1 more)
(+65 files in other folders)
