[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Pynch <andrewpynchbusiness@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
device_query = "1.1.1"
ctrlc = "3.2.2"
x11 = "2.21.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = "0.28.0"
sqlx = { version = "0.6.0", features = ["runtime-tokio-native-tls", "postgres", "chrono"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
reqwest = { version = "0.11" }
url = "2.2"
webbrowser = "1.0.1"
whoami = "1.5.1"
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
