[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Pynch <andrewpynchbusiness@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["v4"] }
ulid = "1.1"
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = { version = "0.28.0", features = ["chrono", "bundled"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
url = "2.2"
whoami = "1.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
device_query = "1.1.1"
evdev = { version = "0.13.2", default-features = false }
x11 = "2.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1.3"
core-foundation = "0.9"
core-graphics = "0.25"
cocoa = "0.24"
objc = "0.2"
